# hldb

./: .gitignore  .travis.yml  LICENSE  README.md  build.cmd  hldb.cabal  stack-ghc.yaml  stack-ghcjs.yaml  stack.yaml
app/: Main.hs
src/Data/: TreeMap.hs
src/Data/Accounting/: Account.hs  Currency.hs  Journal.hs  Parser.hs  ParsingState.hs  Transaction.hs
src/Hledger/Dashboard/: Account.hs  Accounts.hs  Currency.hs  Journal.hs  ParsingState.hs  Transaction.hs  Types.hs
test/: doctests.hs  hunit.hs  properties.hs  quickcheck.hs
web/: index.html  style.css
webapp/: Main.hs  Styles.hs
webapp/Diagrams/Backend/: VirtualHom.hs
webapp/Graphics/Rendering/: SVG.hs
webapp/Hledger/: App.hs
webapp/Hledger/Components/: JournalComponent.hs  JournalLoader.hs  MainComponent.hs  Utils.hs
webapp/Hledger/FFI/: FileSelection.hs
webapp/Hledger/UI/: Element.hs  FFI.hs  Rendering.hs
webapp/Hledger/UI/Styles/: Bootstrap.hs
webapp/VirtualHom/: Svg.hs
webapp/VirtualHom/Svg/: Path.hs
