name:                hldb
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/j-mueller/hldb#readme
license:             BSD3
license-file:        LICENSE
author:              Jann Mueller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2015 Jann Mueller
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- Build the properties test
flag test-properties
  default: True
  manual: True

flag test-doctests
  default: True
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:
    Hledger.Dashboard.Account,
    Hledger.Dashboard.Currency,
    Hledger.Dashboard.Journal,
    Hledger.Dashboard.Types
  build-depends:
    base >= 4.7 && < 5,
    contravariant,
    comonad,
    containers,
    deepseq,
    intervals,
    lens,
    text,
    time,
    vector-space
  default-language:    Haskell2010

executable hldb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hldb
  default-language:    Haskell2010

test-suite hldb-properties
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             properties.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  if !flag(test-properties)
    buildable: False
  else
    build-depends:
      base,
      hldb,
      QuickCheck                 >= 2.4,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2,
      transformers

test-suite hldb-doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: test
  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      hldb,
      doctest >= 0.10.1

source-repository head
  type:     git
  location: https://github.com/j-mueller/hldb
