name:                hldb
version:             0.1.0.0
synopsis:            A webapp with reports for your hledger journals
description:         Please see README.md
homepage:            http://github.com/j-mueller/hldb#readme
license:             BSD3
license-file:        LICENSE
author:              Jann Mueller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2015 Jann Mueller
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- Build the doctests
flag test-doctests
  default: True
  manual: True

flag test-hunit
  default: True
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:
    Data.TreeMap,
    Hledger.Dashboard.Account,
    Hledger.Dashboard.Currency,
    Hledger.Dashboard.Journal,
    Hledger.Dashboard.ParsingState,
    Hledger.Dashboard.Transaction
  build-depends:
    base >= 4.7 && < 5,
    contravariant,
    comonad,
    containers,
    deepseq,
    intervals,
    lens,
    mtl,
    parsec,
    text,
    time,
    vector-space
  default-language:    Haskell2010

executable hldb-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hldb
  default-language:    Haskell2010

test-suite hldb-doctests
  default-language:    Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: test
  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      hldb,
      doctest >= 0.10.1,
      QuickCheck

test-suite hldb-hunit
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: hunit.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: test
  if !flag(test-hunit)
    buildable: False
  else
    build-depends:
      base,
      hldb,
      HUnit,
      mtl,
      text,
      time,
      parsec,
      test-framework,
      test-framework-hunit,
      test-framework-th

source-repository head
  type:     git
  location: https://github.com/j-mueller/hldb
