name:                hldb
version:             0.1.0.0
synopsis:            A webapp with reports for your hledger journals
description:         Please see README.md
homepage:            http://github.com/j-mueller/hldb#readme
license:             BSD3
license-file:        LICENSE
author:              Jann Mueller
maintainer:          j.mueller.11@ucl.ac.uk
copyright:           Copyright: (c) 2015 Jann Mueller
category:            Web
build-type:          Simple
cabal-version:       >=1.10

-- Build the doctests
flag test-doctests
  default: True
  manual: True

flag test-hunit
  default: True
  manual: True

flag test-quickcheck
  default: True
  manual: True

flag webapp
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:
    Data.Accounting.Account,
    Data.Accounting.Currency,
    Data.Accounting.Journal,
    Data.Accounting.ParsingState,
    Data.Accounting.Transaction,
    Data.TreeMap
  build-depends:
    base >= 4.7 && < 5,
    contravariant,
    comonad,
    containers,
    deepseq,
    fingertree,
    lens,
    mtl,
    parsec,
    semigroups,
    text,
    time,
    vector-space
  default-language:    Haskell2010

-- GHCJS app
executable hldb-webapp
  hs-source-dirs:      webapp
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:
    Hledger.Components.JournalComponent,
    Hledger.Components.JournalLoader,
    Hledger.Components.MainComponent,
    Hledger.Components.Utils
  if !flag(webapp)
    buildable: False
  else
    build-depends:       base
                       , containers
                       , ghcjs-base >= 0.2.0.0
                       , ghcjs-prim
                       , hldb
                       , lens
                       , mtl
                       , semigroups
                       , text
                       , transformers
                       , virtual-hom
  default-language:    Haskell2010

test-suite hldb-doctests
  default-language:    Haskell2010
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: test
  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base,
      hldb,
      doctest >= 0.11.0

test-suite hldb-hunit
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: hunit.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: test
  if !flag(test-hunit)
    buildable: False
  else
    build-depends:
      base,
      hldb,
      HUnit,
      mtl,
      text,
      time,
      parsec,
      test-framework,
      test-framework-hunit,
      test-framework-th

test-suite hldb-quickcheck
  default-language: Haskell2010
  type: exitcode-stdio-1.0
  main-is: quickcheck.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: test
  if !flag(test-quickcheck)
    buildable: False
  else
    build-depends:
      base,
      containers,
      hldb,
      lens,
      mtl,
      parsec,
      text,
      time,
      transformers,
      vector-space,
      QuickCheck                 >= 2.4,
      test-framework             >= 0.6,
      test-framework-quickcheck2 >= 0.2,
      test-framework-th          >= 0.2

source-repository head
  type:     git
  location: https://github.com/j-mueller/hldb
